--- a/Code/src/thesis_aurian/CMakeLists.txt
+++ b/Code/src/thesis_aurian/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
   nav_msgs
   sensor_msgs
   std_msgs
+  ardrone_velocity_ekf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -121,7 +122,7 @@ INCLUDE_DIRS include
 #  LIBRARIES thesis_aurian
 #  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
-CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs nav_msgs ardrone_autonomy message_runtime
+CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs nav_msgs ardrone_autonomy message_runtime ardrone_velocity_ekf
 )
 
 ###########
@@ -166,6 +167,7 @@ add_executable(square_vel src/controller/square_vel.cpp)
 add_executable(test_controller src/controller/test_controller.cpp)
 add_executable(controller_2016 src/controller/controller_2016.cpp)
 add_executable(image_flow src/computer_vision/image_flow.cpp)
+add_executable(demo src/demo.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -191,6 +193,7 @@ target_link_libraries(square_vel ${catkin_LIBRARIES})
 target_link_libraries(test_controller ${catkin_LIBRARIES})
 target_link_libraries(controller_2016 ${catkin_LIBRARIES})
 target_link_libraries(image_flow ${catkin_LIBRARIES})
+target_link_libraries(demo ${catkin_LIBRARIES})
 
 #############
 ## Install ##
